@@ -4,6 +4,7 @@ Revision history for Geo::Location::Point
 	as_string() now returns the location attribute if that has been set
 	minimum version set to 5.10.0 because of //=
 	Carp on error rather than just dying
+	Allow latitude and longitude to be given instead of lat and long
 
 0.01	Tue 19 Mar 18:16:48 EDT 2019
         First version
